# stylet

./: .gitignore  ARCHITECTURE.md  README.md  check_lidar.py  publish_reference_cloud.py
.github/workflows/: ci.yml
src/stylet_bringup/: CMakeLists.txt  README.md  package.xml
src/stylet_bringup/launch/: full_demo.launch.py
src/stylet_description/: CMakeLists.txt  README.md  package.xml
src/stylet_description/launch/: display.launch.py
src/stylet_description/rviz/: display.rviz
src/stylet_description/urdf/: robot.urdf.xacro
src/stylet_haptics/: CMakeLists.txt  README.md  package.xml
src/stylet_moveit_config/: .setup_assistant  CMakeLists.txt  README.md  package.xml
src/stylet_moveit_config/config/: initial_positions.yaml  moveit.rviz  ros2_controllers.yaml  stylet.ros2_control.xacro  stylet.srdf  stylet.urdf.xacro
src/stylet_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/stylet_msgs/: CMakeLists.txt  README.md  package.xml
src/stylet_msgs/action/: ExecuteProcedure.action
src/stylet_perception/: CMakeLists.txt  README.md  package.xml
src/stylet_perception/config/: registration_errors.csv  target_reference.pcd
src/stylet_perception/include/stylet_perception/: registration_utils.hpp
src/stylet_perception/scripts/: generate_reference_pcd.py  validate_registration.py
src/stylet_perception/src/: cloud_preprocessor.cpp  point_cloud_merger.cpp  surface_registration.cpp
src/stylet_perception/test/: test_registration_utils.cpp
src/stylet_planning/: CMakeLists.txt  README.md  package.xml
src/stylet_planning/include/stylet_planning/: geometry_utils.hpp
src/stylet_planning/launch/: procedure_planner.launch.py
src/stylet_planning/src/: procedure_planner.cpp
src/stylet_planning/test/: test_geometry_utils.cpp
src/stylet_simulation/: CMakeLists.txt  README.md  package.xml
src/stylet_simulation/launch/: sim.launch.py
src/stylet_simulation/worlds/: stylet.world
src/stylet_ui/: CMakeLists.txt  README.md  package.xml  plugins_description.xml
src/stylet_ui/include/stylet_ui/: entry_point_tool.hpp  target_definition_panel.hpp
src/stylet_ui/src/: entry_point_tool.cpp  target_definition_panel.cpp
