<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>stylet_planning</name>
  <version>0.0.0</version>
  <description>Procedure planner: MoveIt-based approach planning and prismatic-actuator needle insertion with force-triggered replanning</description>
  <maintainer email="lilian.lorgeou@gmail.com">Lilian Lorgeou</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>stylet_msgs</depend>
  <depend>eigen</depend>
  <depend>geometric_shapes</depend>
  <depend>shape_msgs</depend>
  <depend>ament_index_cpp</depend>
  <depend>control_msgs</depend>

  <exec_depend>moveit_configs_utils</exec_depend>
  <exec_depend>stylet_moveit_config</exec_depend>
  <exec_depend>stylet_description</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
